Removed more redundancy